# python-ngspice

./: .gitignore  LICENSE  README.md  impedance.py  ledDrop.net  ledDrop.py  mos.py  ngspice.py  pyproject.toml  utils.py  voltageDoubler.py
archive/: mos.net  vDub.net  vDubMult.net  vDubTry.net
src/ngspice_binary/: __init__.py
