[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngspice_binary"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "scipy",
]

[tool.black]
line-length = 100

[tool.mypy]
files = ["."]
install_types = true
exclude = ["^build([/\\\\]|$)"]

ignore_missing_imports = true
